--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 initial_file.html
 Basic_HTML_and_CSS/Hello_World.js
 Basic_HTML_and_CSS/.vscode/settings.json
-`
 html_errors.html
+icons/icons1.png
+icons/icons2.png
