Created portfolio website

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Basic_HTML_and_CSS/.vscode/settings.json
 html_errors.html
 icons/icons1.png
 icons/icons2.png
+file.mp4
+student_portfolio/images/video/Typing.mp4
